[package]
name = "bvh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utility = { path = "../utility"}

[dev-dependencies]
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_core = "0.6.4"
rand_seeder = "0.2.3"